test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_7/src/main.nr

        fn main() -> pub u64 {
            foo(1, main())
        }
        fn foo(a: u64, b: u64) -> u64 {
            a + b
        }
        